--- a/AppControl/app/src/main/res/values/strings.xml
+++ b/AppControl/app/src/main/res/values/strings.xml
@@ -13,4 +13,17 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="idcliente">IdCliente</string>
+    <string name="nombre">Nombre</string>
+    <string name="telefono">Telefono</string>
+    <string name="ins">Ins</string>
+    <string name="act">Act</string>
+    <string name="obt">Obt</string>
+    <string name="lis">Lis</string>
+
+
+
+
 </resources>
